k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posenet-hub
  namespace: posenet
  labels:
    app: posenet-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posenet-hub
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: posenet-hub
    spec:
      containers:
        - name: posenet-hub
          image: "gitlab-registry.nautilus.optiputer.net/librareome/posenet/posenet-hub:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
            - containerPort: 3883
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: "1"
