k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: posenet-hub
  namespace: posenet
  labels:
    app: posenet-hub
spec:
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
    - name: vrpn
      port: 3083
      targetPort: 3038
      protocol: TCP
  type: LoadBalancer
#  loadBalancerIP: 67.58.49.50
  selector:
    app: posenet-hub
