k8s/docs-nginx.yaml
---
# NOTE: The pod needs to be restarted to observe
# changes in the NGINX config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posenet-hub-docs-nginx
  namespace: posenet
  labels:
    app: nginx
    subject: posenet-hub-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      subject: posenet-hub-docs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
        subject: posenet-hub-docs
    spec:
      containers:
        - name: nginx
          image: "gitlab-registry.nrp-nautilus.io/librareome/posenet/posenet-hub/docs:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 4Gi
              cpu: "2"
            requests:
              memory: 1Gi
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: posenet-hub-docs-nginx
  namespace: posenet
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
    subject: posenet-hub-docs

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: posenet-hub-docs
  namespace: posenet
spec:
  rules:
  - host: posenet-hub-docs.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: posenet-hub-docs-nginx
            port:
              number: 80
  tls:
  - hosts:
    - posenet-hub-docs.nrp-nautilus.io
